--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="quiz-header">
                 <h2 id="question-text">Question goes here</h2>
                 <div class="quiz-info">
-                    <p>Question  <span id="current-question">1</span> of <span id="">5</span></p>
+                    <p>Question  <span id="current-question">1</span> of <span id="total-questions">5</span></p>
                     <p>Scroe: <span id="score">0</span></p>
                 </div>
             </div>
@@ -48,5 +48,6 @@
 
 
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
