--- a/index.html
+++ b/index.html
@@ -4,50 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Game</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-
-        <!-- Start Screen -->
-        <div class="screen active" id="start-screen">
-            <h1>Quiz Time!</h1>
-            <p>Test your knowledge with these fun questions</p>
-            <button id="start-btn">Start Quiz</button>
-        </div>
-
-        <!-- Quiz Screen -->
-        <div class="screen" id="quiz-screen">
-            <div class="quiz-header">
-                <h2 id="question-text">Question goes here</h2>
-                <div class="quiz-info">
-                    <p>Question  <span id="current-question">1</span> of <span id="total-questions">5</span></p>
-                    <p>Score: <span id="score">0</span></p>
-                </div>
-            </div>
-
-
-            <div id="answers-container" class="answers-container">
-                <!-- Answer button will be inserted here from js code later on -->
-            </div>
-
-            <div class="progress-bar">
-                <div id="progress" class="progress"></div>
-            </div>
-        </div>
-
-        <!-- Result Screen -->
-        <div id="result-screen" class="screen">
-            <h1>Quiz Result</h1>
-            <div class="result-info">
-                <p>You score <span id="final-score">0</span> out of <span id="max-score">5</span></p>
-                <div id="result-message">Good Job!</div>
-            </div>
-            <button id="restart-btn">Restart Quiz</button>
-        </div>
-
-
+    <!-- Home Screen -->
+    <div>
+        <h1>Quiz Game</h1>
+        <p>Test your knowledge!</p>
+        <button>Start Quiz</button>
     </div>
-    <script src="script.js"></script>
+
+    <!-- Quiz Screen -->
+    <div>
+        <div>
+            <p>Question <span>1</span> of <span>5</span></p>
+            <p>Score: <span>0</span></p>
+        </div>
+        <!-- Questions Container -->
+        <div>
+
+        </div>
+        
+        <!-- Progress Bar -->
+        <div>
+            <div></div>
+        </div>
+    </div>
+
+    <!-- Result Screen -->
+    <div>
+        <h1>Result</h1>
+        <h2>100%</h3>
+        <p>Congratulations</p>
+        <button>Restart Quiz</button>
+    </div>
 </body>
 </html>
